--- a/springboot-k8s.yaml
+++ b/springboot-k8s.yaml
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: springboot-k8s-service
-  namespace: default
+  namespace: local
   labels:
     app: springboot-k8s
 spec:
